2008-08-06  Thomas Heller  <theller@python.net>

	* The repository was moved from python.org to sourceforge.net.
	The svn trunk URL is now:
	https://comtypes.svn.sourceforge.net/svnroot/comtypes/trunk

	The script that extracted the repository is in
	admin/extract_comtypes_repo. The repository structure and the
	revision numbers have changed; the last revision on python.org is
	rev 65336, this was imported as revision rev 355.

2008-07-18  Thomas Heller  <theller@python.net>

	* comtypes\test\find_memleak.py: Windows CE does not have
	GetProcessMemoryInfo; disable the find_memleak function because it
	cannot work.

	* comtypes\client\_generate.py, comtypes\typeinfo.py: Windows CE
	doesn't have QueryPathOfRegTypeLib - try to emulate it.  Also it
	doesn't use tha PATH environment variable; use a hardcoded search
	path for type libraries.

	* comtypes\test\runtests.py: Define a main() function.

2008-05-29  Thomas Heller  <theller@python.net>

	* Improved the [in, out] parameter workaround.  These parameters
	are now optional.  Removed the special codegeneration for [in,
	out] parameters in IEnumXXX.Next methods.  Added test.

2008-05-16  Thomas Heller  <theller@python.net>

	* Provide a workaround for a bug in ctypes. This allows methods
	using [in, out] parameters to correctly convert native Python
	values.

	* comtypes/tools/tlbparser.py: When GetRefTypeInfo(hreftype)
	fails, emit a warning and generate a fake type instead.

2008-05-07  Thomas Heller  <theller@python.net>

	* Fixed the definition of VARIANT.empty and VARIANT.null; the
	values were swapped.
	https://sourceforge.net/tracker/?func=detail&atid=692940&aid=1959722&group_id=115265

2008-04-25  Thomas Heller  <theller@python.net>

	* Replace logger.info() calls with logger.debug() since it is more
	appropriate.

	In comtypes.server.connectionpoints, when a event notification
	fails with an error indicating that the event sink is no longer
	present, close the connection and log a warning.
