@@ -1,3 +1,11 @@
+2008-08-07  Thomas Heller  <theller@python.net>
+
+	* comtypes\tools\codegenerator.py: Change the order of the
+	interfaces in the _com_interfaces_ and _outgoing_interfaces_ list
+	so that the default interface is the first one.  This fixes the
+	bug that GetEvents() and ShowEvents() sometimes did use the wrong
+	event interface.
+
 2008-08-06  Thomas Heller  <theller@python.net>
 
 	* The repository was moved from python.org to sourceforge.net.
